--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,6 +41,7 @@ hr {
     background-color: #d9fff7;
     position: relative;
     padding: 100px;
+    margin: 0;
 }
 
 .top-cloud{
@@ -75,6 +76,7 @@ hr {
     font-family: 'Montserrat', sans-serif;
     background-color: #66bfbf;
     font-weight: bolder;
+    margin: 0;
 }
 
 .footer-link {
@@ -90,6 +92,7 @@ hr {
 
 .middle-container {
     background-color: #eaf6f6;
+    margin: 0;
 
 }
 
