--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -152,7 +152,7 @@ hr {
       line-height: 1.5;
   }
   .profile {
-      margin: 50px auto 50px auto;
+      margin: 0;
   }
 /******************************** ID tags **************************************************/
 
